--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.10",
+    "axios": "^1.1.3",
+    "express": "^4.18.2",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
